# pspd1

./: README.md
ai-server/: .gitignore  DEPLOY_TUTORIAL.md  README.md  main.py  pyproject.toml
ai-server/src/: doctor_chat.py  grpc.py  logging_config.py
ai-server/src/proto/: ai_server_pb2.py  ai_server_pb2_grpc.py
client/: angular.json  package-lock.json  package.json
client/src/: index.html
client/src/app/: app.config.ts  app.routes.ts
client/src/app/components/chat/: chat.component.html  chat.component.scss  chat.component.ts
client/src/app/components/home/: home.component.html  home.component.scss  home.component.ts
client/src/app/components/login/: login.component.html  (+2 more)
client/src/app/guards/: no-auth.guard.ts
client/src/app/services/: auth.service.ts  chat.service.ts  patient.service.ts
database-server/: .gitignore  DEPLOY_TUTORIAL.md  README.md  package-lock.json  package.json
database-server/prisma/: schema.prisma
database-server/prisma/migrations/20250501045612_init/: migration.sql
database-server/src/: grpc.ts  logger.ts  main.ts  prisma.ts
database-server/src/proto/: database-server_grpc_pb.d.ts  database-server_grpc_pb.js  database-server_pb.d.ts  database-server_pb.js
proto/: ai-server.proto  database-server.proto
web-server/: .gitignore  DEPLOY_TUTORIAL.md  README.md  go.mod  go.sum
web-server/src/: main.go
web-server/src/grpc/: ai-server.go  database-server.go
web-server/src/http/: server.go
web-server/src/proto/: ai-server.pb.go  ai-server_grpc.pb.go  database-server.pb.go  database-server_grpc.pb.go
(+6 files in other folders)
