[tool.poetry]
package-mode = false

[tool.poetry.dependencies]
python = ">=3.10,<3.12"
grpcio = "^1.71.0"
openai = "^1.76.2"
python-dotenv = "^1.1.0"


[tool.poetry.group.dev.dependencies]
grpcio-tools = "^1.71.0"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
